<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cricket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user3.quizzeapp2.CricketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00796B"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:src="@mipmap/crick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:padding="16dp"
            android:text="After answering all questons click submit!!!"
            android:textColor="@android:color/black"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/opponent"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/qustion1_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/batman"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/qustion2_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/browler"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/qustion3_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/twenty_twenty"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/qustion4_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

            </Spinner>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/ever_won"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/qustion5_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">

            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:onClick="submitQuize"
            android:text="Submit"
            android:textColor="@android:color/black" />

    </LinearLayout>

</ScrollView>
